syntax = "proto3";

//请求解锁背包格子
message BagUnLockReq
{    
}
